css/styles.css
.c_node {
	stroke: rgba(0, 0, 0, 1);
	fill: rgba(255, 0, 0, 1);
}

.v_node, .vl_node, .a_node {
	stroke: rgba(0, 0, 0, 1);
	stroke-width: 2px;
	fill: #fff;
}

.two_dim_array_e {
	stroke: rgba(0, 0, 0, 1);
	stroke-width: 1px;
	fill: white;
}

.min_a_btn {
	stroke: black;
	stroke-width: 1px;
	fill: white;
}

.exp_a_node {
	stroke: rgba(0, 0, 0, 1);
	stroke-width: 1px;
	fill: none;
}

.straight_link {
	stroke-width: 10px;
	stroke: #808080;
}

.curved_link {
	stroke-width: 1px;
	stroke: #000;
	fill: none;
}

#var_names p {
	margin: 8px;
	color: DimGray;
}

.background {
	fill: rgba(0,0,0,0);
}

.drag_rect {
	fill: red;
	stroke: black;
	stroke-dasharray: 5, 5;
}

#content {
	position: relative;
	height: 90%;
}

#sider {
	position: absolute;
	padding: 10px;
	z-index: 1;
	background: white;
	right: 50px;
  	top: 0;
	width: 220px;
}

#v_layout {
	position: absolute;
	padding: 10px;
	background: rgba(255, 228, 181, 0.2);
	left: 0;
  	top: 0;
	width: 300px;
	height: auto;
}

#search_input {
	width: 200px;
	margin: 5px;
}

#filter_range {
	width: 200px;
	margin: 5px;
}

#splitter {
  position: absolute;
  height: 90%;
  background: rgba(0,0,0,0);
  cursor: col-resize;
  top: 0;
  right: -8px;
  width: 16px;
}

